--- a/css/home_style.css
+++ b/css/home_style.css
@@ -1,2 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
+:root{
+    --main-color: #DD2F6E;
+    --color-dark: #1D2231;
+    --text-grey: #
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+
